docs(api): atualiza cenários de teste com gêneros no rest.http e atualiza especificações swagger
